--- a/src/main/webapp/resources/bill/inwardBillPrintPos.xhtml
+++ b/src/main/webapp/resources/bill/inwardBillPrintPos.xhtml
@@ -294,6 +294,8 @@
                         <td>
                             <h:outputLabel value="#{cc.attrs.bill.creater.staff.code}" >
                             </h:outputLabel>
+                            <h:outputLabel value="#{cc.attrs.bill.id}" >
+                            </h:outputLabel>
                         </td>
                     </tr>
 
