--- a/src/main/webapp/resources/bill/posOpdBill.xhtml
+++ b/src/main/webapp/resources/bill/posOpdBill.xhtml
@@ -253,6 +253,10 @@
                                                font-size: 12px!important;
                                                font-family:Arial, Helvetica, sans-serif!important;">
                                 </h:outputLabel>
+                                 <h:outputLabel value="#{cc.attrs.bill.id}" style="text-align: center!important;   
+                                               font-size: 12px!important;
+                                               font-family:Arial, Helvetica, sans-serif!important;">
+                                </h:outputLabel>
                             </td>
                         </tr>
                     </h:panelGroup>
