--- a/src/main/webapp/resources/pharmacy/clinical_pharmacy_sale_bill.xhtml
+++ b/src/main/webapp/resources/pharmacy/clinical_pharmacy_sale_bill.xhtml
@@ -92,8 +92,9 @@
                         </td>
 
                         <td style="width: 30%" >
-                            <!--<h:outputLabel value=": &npsp;" ></h:outputLabel>-->
                             <h:outputLabel value="#{cc.attrs.bill.creater.staff.code}" >
+                            </h:outputLabel>
+                            <h:outputLabel value="#{cc.attrs.bill.id}" >
                             </h:outputLabel>
                         </td>
 
