--- a/src/main/webapp/resources/pharmacy/credit/saleBill.xhtml
+++ b/src/main/webapp/resources/pharmacy/credit/saleBill.xhtml
@@ -95,8 +95,9 @@
                         </td>
 
                         <td style="width: 30%" >
-                            <!--<h:outputLabel value=": &npsp;" ></h:outputLabel>-->
                             <h:outputLabel value="#{cc.attrs.bill.creater.staff.code}" class="billDetails">
+                            </h:outputLabel>
+                            <h:outputLabel value="#{cc.attrs.bill.id}" class="billDetails">
                             </h:outputLabel>
                         </td>
 
@@ -120,8 +121,9 @@
                         </td>
 
                         <td style="width: 30%" >
-                            <!--<h:outputLabel value=": &npsp;" ></h:outputLabel>-->
                             <h:outputLabel value="#{cc.attrs.bill.creater.staff.code}" class="billDetails">
+                            </h:outputLabel>
+                            <h:outputLabel value="#{cc.attrs.bill.id}" class="billDetails">
                             </h:outputLabel>
                         </td>
 
