--- a/src/main/webapp/resources/pharmacy/saleBill.xhtml
+++ b/src/main/webapp/resources/pharmacy/saleBill.xhtml
@@ -98,6 +98,8 @@
                             <!--<h:outputLabel value=": &npsp;" ></h:outputLabel>-->
                             <h:outputLabel value="#{cc.attrs.bill.creater.staff.code}" class="billDetails">
                             </h:outputLabel>
+                            <h:outputLabel value="#{cc.attrs.bill.id}" class="billDetails">
+                            </h:outputLabel>
                         </td>
 
                     </tr>
