Signed-off-by: Buddhika <buddhika@ohmis1.asia-southeast1-b.c.my-project-1537433467858.internal>

--- a/src/main/webapp/search_all.xhtml
+++ b/src/main/webapp/search_all.xhtml
@@ -65,11 +65,15 @@
 
                         </f:facet>
 
-                        <p:dataTable rowIndexVar="i" id="tblBills" value="#{searchController.bills}" var="bill"  style="min-width: 100%;"  >
+                        <p:dataTable rowIndexVar="i" 
+                                     id="tblBills" 
+                                     value="#{searchController.bills}" var="bill"  style="min-width: 100%;"  >
                             <p:column headerText="No" styleClass="alignTop">
                                 <h:outputLabel value="#{i+1}"/>
                             </p:column>
-
+                            <p:column headerText="ID" >                              
+                                <h:outputLabel  value="#{bill.insId}" ></h:outputLabel>                                    
+                            </p:column> 
                             <p:column headerText="Bill No(Instiution Id)" >                              
                                 <h:outputLabel  value="#{bill.insId}" ></h:outputLabel>                                    
                             </p:column>       
