--- a/src/main/webapp/list_bills.xhtml
+++ b/src/main/webapp/list_bills.xhtml
@@ -13,19 +13,13 @@
 
 
                     <p:panelGrid columns="10" >
-                        <h:outputLabel value="Bill No(Ins ID)"/>
-                        <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.insId}" />
+                        <h:outputLabel value="From"/>
+                        <p:datePicker showTime="true" value="#{searchController.fromDate}" pattern="dd MM yyyy hh:mm" ></p:datePicker>
 
-                        <h:outputLabel value="Bill No(Dept ID)"/>
-                        <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.deptId}" />
+                        <h:outputLabel value="To"/>
+                        <p:datePicker showTime="true" value="#{searchController.toDate}" pattern="dd MM yyyy hh:mm" ></p:datePicker>
 
-                        <h:outputLabel value="BHT No"/>
-                        <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.bhtNo}" />
-
-                        <h:outputLabel value="Bill ID"/>
-                        <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.refBillNo}" />
-
-                        <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{searchController.createSearchBill()}"/>
+                        <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{searchController.listAllBills()}"/>
                         <p:commandButton value="Download" ajax="false" >
                             <p:dataExporter target="tblBills" fileName="bills" type="xlsx" ></p:dataExporter>
                         </p:commandButton>
