--- a/src/main/webapp/pharmacy/pharmacy_report_adjustment_bill_item.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_adjustment_bill_item.xhtml
@@ -37,7 +37,7 @@
                             </p:commandButton>
 
                             <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
-                                <p:dataExporter type="xlsx" target="tbl" fileName="Detailed_Transfer_Listing"  />
+                                <p:dataExporter type="xls" target="tbl" fileName="Detailed_Transfer_Listing"  />
                             </p:commandButton>  
                         </h:panelGrid>
 
