--- a/src/main/webapp/resources/pharmacy/search/sale.xhtml
+++ b/src/main/webapp/resources/pharmacy/search/sale.xhtml
@@ -22,7 +22,12 @@
             <p:inputText autocomplete="off" value="#{searchController.searchKeyword.itemName}"/>
             <p:inputText autocomplete="off" value="#{searchController.searchKeyword.code}"/>
         </h:panelGrid>
-        <p:dataTable rowIndexVar="i"  value="#{searchController.bills}" var="bill"  >
+        
+        <p:commandButton ajax="false" value="Download" >
+            <p:dataExporter target="tbl" type="xlsx" fileName="bill_list" ></p:dataExporter>
+        </p:commandButton>
+        
+        <p:dataTable rowIndexVar="i" id="tbl"  value="#{searchController.bills}" var="bill"  >
             <f:facet name="header">
                 <h:outputLabel value="SALE BILL SEARCH"/>
             </f:facet>
